--- a/Console_Apps/CodeBlogFitness/CodeBlogFitness_BL/CodeBlogFitness_BL.csproj
+++ b/Console_Apps/CodeBlogFitness/CodeBlogFitness_BL/CodeBlogFitness_BL.csproj
@@ -1,11 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Controller\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0" />
   </ItemGroup>
 </Project>
