--- a/Console_Apps/CodeBlogFitness/CodeBlogFitness/CodeBlogFitness.csproj
+++ b/Console_Apps/CodeBlogFitness/CodeBlogFitness/CodeBlogFitness.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CodeBlogFitness_BL\CodeBlogFitness_BL.csproj" />
