--- a/Console_Apps/CodeBlogFitness/CodeBlogFitness/CodeBlogFitness.csproj
+++ b/Console_Apps/CodeBlogFitness/CodeBlogFitness/CodeBlogFitness.csproj
@@ -12,4 +12,19 @@
   <ItemGroup>
     <ProjectReference Include="..\CodeBlogFitness_BL\CodeBlogFitness_BL.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Languages\Messages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Languages\Messages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
