The second step of possibility using dependency injection and database

--- a/Console_Apps/CodeBlogFitness/CodeBlogFitness_BL/CodeBlogFitness_BL.csproj
+++ b/Console_Apps/CodeBlogFitness/CodeBlogFitness_BL/CodeBlogFitness_BL.csproj
@@ -9,5 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
   </ItemGroup>
 </Project>
