--- a/Console_Apps/CodeBlogFitness/CodeBlogFitness/CodeBlogFitness.csproj
+++ b/Console_Apps/CodeBlogFitness/CodeBlogFitness/CodeBlogFitness.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
   </ItemGroup>
 
   <ItemGroup>
